--- a/Reservia/main.css
+++ b/Reservia/main.css
@@ -4,63 +4,87 @@ html{
 }
 
 body{    
-    margin: 0 0 0 40px;
+    margin: 5px;
 
 }
 
 
-/* --------------------------------Style the Nav ----------------------------------------------*/
-.topnav {
-    display: flex;
-    margin: 0 100px 20px 0;
-}
-.topnav a {       
-    padding: 14px 0 16px 0;
-    font-size: 17px;
-    text-decoration: none;
-    display: block;
-}
+/* --------------------------------Style the Nav top ----------------------------------------------*/
 .title{    
     font-size: 20px;
     font-weight: bold;
     text-shadow: 0 0 black;
 }
 
-/* -----------------------------Style the nav-right --------------------------------------------*/
-.topnav-right {
-    display: flex;   
+.topnav {
+    display: inline;
+    margin: 20px 100px 20px 0; 
 }
 
+.topnav .inscription a{
+    text-decoration: none;
+}
+
+.topnav .topnav-right a {
+
+    padding: 14px 16px;
+    font-size: 17px;
+    text-decoration: none;
+}
+.logo-picture{
+    float: left;
+    margin: 0 120px 20px 20px;
+
+}
+.inscription{
+    float: right;
+    margin-top: 15px;
+
+}
 #signin{
     font-weight: bold;   
     border: none;
+    color: #0065fc;
+
+}
+.logo{
+    display: inline-block;
+    height: 50px;
+    margin-top: 20px;
 }
 
+/* -----------------------------Style the nav-bottom --------------------------------------------*/
+.topnav-right{
+    margin-top: 20px;
+}
+
+
 .topnav-text-hebergement{
+
     float: left;
     width: 185px;
     text-align: center;
-}
+    border-bottom: 3px solid #f2f2f2;
+    padding-bottom: 10px;
 
+
+}
 .topnav-text-activite{
     float: right;
     width: 180px;
     text-align: center;
+    border-bottom: 3px solid #f2f2f2;
+    padding-bottom: 10px;
 }
 
 
-/* -------------------------Style the nav-logo---------------------------------------------------- */
-.logo{ 
-    flex: 1 1 auto;
-    margin: 40px 0 0 0 ;
-}
 
 
 
 /* ------------------------For the  active/current Nav------------------------------------------- */
 
 .topnav-text-hebergement:hover {
-    border-top: 5px solid #0065fc;
+    border-bottom: 5px solid #0065fc;
     color: #0065fc;
 }
 .hebergement-active:hover {
@@ -68,29 +92,29 @@ body{
 }
 
 .topnav-text-activite:hover {
-    border-top: 5px solid #0065fc;
+    border-bottom: 5px solid #0065fc;
     color: #0065fc;
 }
 .activite-active:hover {   
     color: #0065fc;
 }
 
-
 /*--------------------------Style Headers Search----------------------------------------------------------*/
 .header-title{
-    font-weight: bolder;
+    font-weight: bold;
+    display: block;
+    margin-left: 10px;
+    font-size: 25px;
+    text-shadow: 0 0 black;
 }
-
+.header-text{
+    margin: 10px 0 40px 10px;
+}
 .container-header {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    flex-basis: auto;
-    width: 31.4em;
     background-color: #f2f2f2;
-    overflow: auto;
     border-radius: 20px 20px 20px 20px;
-    margin: 0;
+    margin-left: 10px;
     padding: 0;
 
 }
@@ -105,7 +129,7 @@ body{
 .home{
     background-color: #f2f2f2;
     border: 5px solid #f2f2f2;
-    width: 2.5em; 
+
 }
 
 #adress-text{
@@ -114,21 +138,27 @@ body{
     padding-left: 20px;
     font-weight: bold;
     font-size: 20px;
+    width: 200px;
+    font-family: 'Raleway','Arial', 'Helvetica','sans-serif';
 
+}
+
+
+#adress-text::placeholder{
+    color: black;
 }
 
 .rechercher{
     background-color : #0065FC;
-    border-radius: 00px 20px 20px 0px;
+    border-radius: 15px;
     color: white;
 }
 
 
 /*--------------------------Style Headers Filtering---------------------------*/
 .filtre, .filtre-label{
-    display: inline-block;
-    margin-right: 33px;
-    margin-top: 30px;
+    display: block;
+    margin: 20px 0 10px 10px;
     font-size: 20px;
     font-weight: bold;
 }
@@ -141,10 +171,26 @@ body{
     border-bottom:   1px solid   #d9d9d9;
     border-right:  1px solid   #d9d9d9;
     border-left: none;
-    margin-right: 33px;
+    margin-top: 20px;
+}
+.cadre-economie{
+    float: left;
+    border-radius: 25px;
+    border-top:  1px solid   #d9d9d9;
+    border-bottom:   1px solid   #d9d9d9;
+    border-right:  1px solid   #d9d9d9;
+    border-left: none;
+}
+.cadre-famille{
+    float: right;
+    border-radius: 25px;
+    border-top:  1px solid   #d9d9d9;
+    border-bottom:   1px solid   #d9d9d9;
+    border-right:  1px solid   #d9d9d9;
+    border-left: none;
 }
 
-.cadre:hover{
+.cadre:hover, .cadre-economie:hover, .cadre-famille:hover{
     background-color: #deebff;
 }
 
@@ -154,8 +200,6 @@ body{
     background-color: #deebff;
     width: 50px; 
     height: inherit;
-    font-size: 20px;
-    text-align: center;
     vertical-align: middle;
 }
 
@@ -163,12 +207,12 @@ body{
     font-size: 20px;
     text-align: center;
     margin: 15px;
+    color: #0065fc;
 }
 
 .filtre-text-container{
     display: inline-block;
-    padding-right: 20px;
-    padding-left: 15px;
+    padding-right: 20px;       
     font-weight: bold;
     font-size: 20px;
     border-radius: 25px;
@@ -180,45 +224,44 @@ body{
 
 .info-label{
     display: inline-block;
-    border-radius: 50px;
-    border:  1px solid #deebff;
-    width: 50px; 
-    height: 50px;
+    border-radius: 30px;
+    border: 1px solid #deebff;
+    width: 30px;
+    height: 30px;
     font-size: 15px;
     text-align: center;
+    margin: 0 10px 0 10px;
+    float: left;
+
 
 }
 
 .info-text{
     display: inline-block;
+    width: 300px;
+}
+.info-text-p{
+
+    display: inline;
+    font-size: 15px;
 }
 
-.info-logo{
-    font-size: 20px;
-    text-align: center;
-    margin: 15px;
+.info-logo{   
     color: #0065FC;
+    vertical-align: sub;
 
 }
 
 
 /*--------------------------Style Section 1 Hebergement---------------------------*/
-.hebergement{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 40px;
-    grid-auto-rows: minmax(100px, auto);
+.box1{
+    display: contents;
 }
 
-.box1{
-    float: left;
-    background-color: #F2F2F2;
-    width: 1080px;
-    height: 700px;
-    text-align: left;
-    grid-column: 1 / 3;
-    grid-row: 1;
-    border-radius: 20px;
+#ancre-hebergements{
+    font-weight: bold;    
+    margin: 40px 0 30px 20px;
+    display: block;
 }
 
 .clic-card{
@@ -226,16 +269,13 @@ body{
     color: black;
 }
 
-.h2-title, .afficher-plus{
-    margin: 40px 0 30px 40px;
+.activite-title, .afficher-plus{
+    margin: 40px 0 0 10px;
 
 }
 
 .column-hebergement {
-    float: left;
-    width: 250px;
-    margin: 0 40px 40px 40px;
-    padding: 0 10px;
+    margin: 0 0px 40px 0px;
 }
 
 .row-hebergement-1:after {
@@ -245,18 +285,19 @@ body{
 }
 
 
-
 .card-hebergement {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;    
-    width: 240px;
+    padding: 0 0px 16px 0px;
+    margin: 15px;
+    text-align: center;
+    width: 325px;
     height: 200px;
     border-radius:10px;
+
 }
 
 .hebergement-picture{
-    width: 240px;
+    width: 325px;
     height: 114px;
     border-radius: 10px 10px 0px 0px;
     object-fit: cover;
@@ -278,33 +319,37 @@ body{
 }
 
 .rating-hebergement{
-    margin: 15px 0 0 0;
+    margin: 10px 0 0 0;
 }
 
-.title-card{
-    margin: 0 0 15px 0;
+.text-card{
+    display: block;
+    margin: 10px 0 15px 0;
+}
+
+.afficher-plus{
+    margin: 0 0 40px 10px;
 
 }
 
 /*--------------------------Style Section 1 Populaire---------------------------*/
 .h2-title-populaire{
-    margin: 10px 0px 20px 40px;
+    margin: 40px 40px 40px 20px;
+    font-weight: bold;
+    float: left;
 
 }
+
 .chart-logo{
     font-size: 30px;
     text-align: center;
-    margin: 30px 0 0 165px;
-
+    margin: 40px 10px 0 0;
+    float:right;
 
 }
 .box2{
-    float: right;
     background-color: #F2F2F2;
-    grid-column: 3/ 3;
-    grid-row: 1;
-    height: 700px;
-    width: 480px;
+    height: 650px;
     border-radius: 20px;
 }
 
@@ -319,10 +364,9 @@ body{
     float: left;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 5px 0 5px 5px;
-    margin: 0 0 40px 40px;
-    text-align: left;
-    background-color: #f2f2f2;
-    width: 380px;
+    margin: 0 0 20px 10px;
+    text-align: left;    
+    width: 340px;
     height: 140px;
     border-radius: 10px;
 }
@@ -344,7 +388,7 @@ body{
 }
 
 .rating-populaire{
-    margin-top: 45px;
+    margin-top: 35px;
 }
 
 
@@ -353,87 +397,33 @@ body{
     width: 100%;
 
 }
-.h2-title-activite{
-    margin: 40px 0 20px 0;
-}
 
 .row-activite-container {
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 20px 20px;
-    height: 450px;
-    grid-template-areas:
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Dame-de-la-garde Dame-de-la-garde"
-        "Vieux-port Vieux-port Pomegues Pomegues Calangues Calangues Longchamps Longchamps"
-        "Vieux-port Vieux-port Frioul Frioul Calangues Calangues Longchamps Longchamps"
-        "Vieux-port Vieux-port Frioul Frioul Calangues Calangues Longchamps Longchamps";
-}
-
-.card-vieux-port{
-    grid-area: Vieux-port;
-
-}
-
-.card-Pomegues {
-    grid-area: Pomegues;
-}
-
-.card-Frioul {
-    grid-area: Frioul;
-}
-
-.card-Calangues {
-    grid-area: Calangues;
-}
-
-.card-Dame-de-la-garde { 
-    grid-area: Dame-de-la-garde;
-}
-
-.card-Longchamps { 
-    grid-area: Longchamps;
+    margin: 20px 10px 20px 10px;
 }
 
 .card-activite {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    height: 100%;
+    height: 250px;
     width: 345px;
     border-radius: 10px;
+    margin-bottom: 40px;
 }
 
 .activite-picture{
     float:left;
     padding: 1px;
-    margin-right: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     width: 344px;
     height: 181px;
     border-radius:  10px 10px 0px 0px;
     object-fit: cover;
 }
-.picture-frioul{
-    width: 344px;
-    height: 89px;
-    object-fit: cover;
 
-
-}
 .picture-large{
     width: 344px;
-    height: 400px;
 }
 
-.picture-pomegues{
-    height: 242px;
-}
-
-
-.picture-dame, .picture-longchamps{
-    height: 167px;
-}
 
 .text-activite{
     margin-left: 20px;
@@ -444,35 +434,103 @@ body{
 
 
 /*--------------------------Style Footer---------------------------*/
-.box3{
-    width: 100%;
-
+.box4{
+    background-color: #F2F2F2;
 }
-
-.footer-propos{
-    float: left;
-    margin: 40px 0 40px 0;
+.footer-propos,.footer-hebergement,.footer-assistance{
+    margin-left: 20px;
+    padding-top: 20px;
 }
-
-.footer-hebergement{
-
-    float: left;
-    margin: 40px 0 40px 400px;
-}
-
-.footer-assistance{
-    float: right;
-    margin: 40px 400px 40px 0;
-}
-
-
 
 
 /* ------------------------Responsive ----------------------- */
-@media only screen and (max-width: 1650px){
+
+@media only screen and (max-width: 320px){
+    body{
+        margin:0;
+        display: contents;
+    }
+    .logo-picture {    
+        margin: 0 100px 20px 20px;
+    }
+    .topnav-text-hebergement {    
+        width: 165px;
+    }
+    .topnav-text-activite {
+        width: 140px;
+    }
+    #adress-text {    
+        width: 175px;
+    }
+    .cadre-economie {
+        float: none;
+        display: inline-block;
+    }
+    .cadre-famille {
+        float: none;
+        display: inline-block;
+        margin-top: 20px;
+    }
+    .info-container {
+        display: flex;
+    }
+    .card-populaire {
+        width: 300px;   
+        margin: 0 0 20px 5px;
+    }
+    .populaire-picture {
+        width: 110px;
+    }
+    .card-hebergement {
+        width: 300px;   
+        margin: 0 0 20px 5px;
+    }
+    .hebergement-picture {
+        width: 285px;
+    }
+    .card-activite {
+        width: 300px;   
+
+    }
+    .picture-large {
+        width: 300px;
+    }
+}
+
+
+@media only screen and (min-width: 667px){
     body{
         display: block;
         width: 100%;
+
+    }
+    .logo-picture {
+        margin: 0 400px 20px 20px;
+    }
+    .topnav-text-hebergement {
+        width: 333px;
+    }
+    .topnav-text-activite {
+        width: 333px;
+    }
+    .header-title{
+        display: inline-block;
+        margin-top: 40px;
+    }
+    .container-header {
+        width: fit-content;
+    }
+    .filtre, .filtre-label {
+        display: inline-block;
+    }
+    .cadre-famille { 
+        margin-right: 100px;
+    }
+    .cadre-romantique{
+        margin-right: 200px;
+    }
+    .info-text {
+        display: inline;
 
     }
     .box1 {
@@ -483,120 +541,84 @@ body{
         display: inline;
     } 
     .box2{
-        display: block;
-        float: none;
+        width: auto;  
+        height: 750px;
     }
-}
-
-@media only screen and (max-width: 1400px) {
-    .box3 {
-        display: inline-block;
-        float: none;
+    .row-hebergement-1{
+        margin: 40px;
     }
-    .row-activite-container{
-        grid: none;
-        display: block;
+    .card-populaire {       
+        width: 400px;
+        margin: 0 0 0 80px;
     }
-    .card-Vieux-port, .card-Pomegues, .card-Calangues, .card-Dame-de-la-garde, .card-Frioul, .card-Longchamps{
-        margin-top: 20px;
-    }
-    .footer-propos, .footer-hebergement,.footer-assistance{
-        float: none;
-        display: contents;
-    }
-    .box4{
-        margin-top: 40px;
-    }
-}
-@media only screen and (max-width: 1129px) {
-    body{
-        margin: 1em;
-        width: auto;
-    }
-    .filtre, .filtre-label {
-        display: block;
-    }
-    .cadre{
-        margin-top: 10px;
-        display: table;
-    }
-    .info-container {
-        display: initial;
-    }  
-}
-@media only screen and (max-width: 1100px) {
-    .topnav a, .topnav-right {
-        float: none;
-
-    }
-    .navbar a {
-        float: none;
-        display: inline;
-    }
-    .box1{
-        width: 880px;
-    }
-}
-@media only screen and (max-width: 760px) {
-
-    .topnav a, .topnav-right {
-
-        display: block;
-    }
-
-    .filtre, .filtre-label {
-        float: none;
-
-    }
-    .box1{
-        width: 480px;
-    }
-}
-@media only screen and (max-width: 620px) {
-    header h2{
-        display: table-caption;
-    }
-
-    .info-container {
-        white-space: nowrap;
-        display: initial;
-    }
-    .info-label{
-        display: block;
-        float: left;
-    }
-    .info-text{
-        display: table-caption;
-    }
-    .info-text-p {
-        white-space: break-spaces;
-    }
-}
-
-@media only screen and (max-width: 500px) {
-    .container-header{
-        display: inline-block;
-        width: 15em;
-        overflow: inherit;
-    }
-    .home{
-        width: inherit;
-    }
-    .rechercher{
-        width: inherit;
-    }
-    .box1{
-        width: 380px;
-    }
-    .box2{
-        width: 380px;
-    }
-    .card-populaire{
-        width: 330px;
+    .card-hebergement{
+        margin: 0 0 0 130px;
     }
     .h2-title-populaire {
-        margin-right: 20px;
+        margin-left: 40px;    
+    }
+    .chart-logo {    
+        margin-right: 110px;  
+    }
+    #ancre-hebergements {    
+        margin-left: 40px;    
+    }
+    .afficher-plus, .activite-title {  
+        margin-left: 20px;
+    }
+    .card-activite {
+            margin: 40px 0 0 140px;
+    }
+    .footer-propos, .footer-hebergement, .footer-assistance {
+        margin-left: 30px;
+        float:left;
+    }
+}
+
+@media only screen and (min-width: 768px){
+    .topnav-text-hebergement {    
+        width: 385px;
+    }
+    .topnav-text-activite {
+        width: 381px;
+    }
+    .info-text {
+        width: auto;
+    }
+    .cadre-economie {
+        margin: 0 195px 0 0
     }
 
+    .h2-title-populaire {        
+        margin-bottom: 0;
+    }
+    .row-hebergement-1 {
+        margin: 40px 40px 5px 100px;
+        display: inline-block;
+    }
+    .card-populaire {       
+        margin-left: 60px;
+    }
+    .card-hebergement {
+        margin: 0 0 20px 100px;
+    }
+    .card-activite {
 
+        margin: 0 0 20px 190px;
+    }
+    .box4{
+        width: auto;
+        height: 180px;
+    }
+     .footer-propos, .footer-hebergement, .footer-assistance {
+        margin-left: 80px;
+        
+    }
+}
+
+@media only screen and (min-width: 1024px){
+    
+    
+    
+    
 }
